--- a/ui.html
+++ b/ui.html
@@ -40,10 +40,54 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=sN4Bchwq&__jvsc=Twitter&bid=ngf3qMwf'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/advanced-reg-nurse-prac-5627'>Advanced Reg Nurse Prac - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/supply-chain-specialist-5626'>Supply Chain Specialist - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/cook-i-hillcrest-market-place-5629'>Cook I - Hillcrest Market Place - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5625/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States  United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5626/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States  United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5627/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States  United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5628/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States  United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5629/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States  United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/admin-services-coordinator-anesthesia-pain-clinic-5625'>Admin Services Coordinator-Anesthesia Pain Clinic - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/holden-comprehensive-cancer-center-clinical-trials-rsrch-data-manager-5628'>Holden Comprehensive Cancer Center Clinical Trials Rsrch Data Manager - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/uxui-designer-intern-mf-realxdata-gmbh-berlin'>
       UX/UI DESIGNER INTERN (m/f) @realxdata GmbH - Rheingau Founders Portfolio
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2ImUhwM&__jvsc=Twitter&bid=nMwTqMwS'>Jobvite, Inc. Careers - UI Developer</a></h5> 
@@ -68,7 +112,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698648048-equipiers-a-temps-plein-nuit-st-nicolas-'>McDonald's Restaurants ?quipiers ? temps plein (NUIT/St-Nicolas) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698648048-equipiers-a-temps-plein-nuit-st-nicolas-'>McDonald's Restaurants ?quipiers ? temps plein (NUIT/St-Nicolas) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -180,7 +224,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -202,7 +246,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/oMysbfwH'>Ayla Networks Careers - UI Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ayla-networks/job/oMysbfwH'>Ayla Networks Careers - UI Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -284,7 +328,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6982718/graduate-trainee-recruitment-consultant-virgin-fasttrack-100-company/?TrackID=12'>Graduate Trainee Recruitment Consultant - Virgin Fasttrack 100 Company job with TRIBECA RECRUITMENT | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6982718/graduate-trainee-recruitment-consultant-virgin-fasttrack-100-company/?TrackID=12'>Graduate Trainee Recruitment Consultant - Virgin Fasttrack 100 Company job with TRIBECA RECRUITMENT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -318,7 +362,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://houzy.join.com/jobs/471475-ui-designer-80-100'>Job @ Houzy (Z?rich): UI Designer 80-100% | JOIN</a></h5> 
+<h5><a href='https://houzy.join.com/jobs/471475-ui-designer-80-100'>Job @ Houzy (Z?rich): UI Designer 80-100% | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -372,7 +416,7 @@
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -388,7 +432,7 @@
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/091ed064-825e-4543-bff3-244229f79e8c'>thredUP - UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/091ed064-825e-4543-bff3-244229f79e8c'>thredUP - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -414,50 +458,6 @@
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-certified-5632'>Pharmacy Technician, Certified - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/supervisor-custodian-services-5638'>Supervisor, Custodian Services - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5630/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5631/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5632/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5633/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5634/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5635/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5636/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5637/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5638/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5640/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
